1908.	[func]		named-checkconf now validates update-policy entries.
			[RT #14963]

1907.	[bug]		Extend ISC_SOCKADDR_FORMATSIZE and
			ISC_NETADDR_FORMATSIZE to allow for scope details.

1906.	[func]		x86 and x86_64 now have seperate atomic locking
			implementations.

1905.	[bug]		Recursive clients soft quota support wasn't working
			as expected. [RT #15103]

1904.	[bug]		A escaped character is, potentially, converted to
			the output character set too early. [RT #14666]

1903.	[doc]		Review ARM for BIND 9.4.

1902.	[port]		Use uintptr_t if available. [RT #14606]

1901.	[func]		Support for SPF rdata type. [RT #15033]

1900.	[port]		freebsd: pthread_mutex_init can fail if it runs out
			of memory. [RT #14995]

1899.	[func]		Raise the UDP recieve buffer size to 32k if it is
			less than 32k. [RT #14953]

1898.	[port]		sunos: non blocking i/o support. [RT #14951]

1897.	[func]		Support for IPSECKEY rdata type. [RT #14967]

1896.	[bug]		The cache could delete expired records too fast for
			clients with a virtual time in the past. [RT #14991]

1895.	[bug]		fctx_create() could return success even though it
			failed. [RT #14993]

1894.	[func]		dig: report the number of extra bytes still left in
			the packet after processing all the records.

1893.	[cleanup]	dighost.c: move external declarations into <dig/dig.h>.

1892.	[bug]		dnssec-signzone, dnssec-keygen: handle negative debug
			levels. [RT #14962]

1891.	[func]		Limit the number of recursive clients that can be
			waiting for a single query (<qname,qtype,qclass>) to
			resolve.  New options clients-per-query and
			max-clients-per-query.

1890.	[func]		Add a system test for named-checkconf. [RT #14931]

1889.	[func]		The lame cache is now done on a <qname,qclass,qtype>
			basis as some servers only appear to be lame for
			certain query types.  [RT #14916]

1888.	[func]		"USE INTERNAL MALLOC" is now runtime selectable.
			[RT #14892]

1887.	[func]		Detect duplicates of UDP queries we are recursing on